# face-alignment

./: .gitignore  CMakeLists.txt  README.MD  face-detection.cpp
models/: _download.txt
src/: CMakeLists.txt  FaceAlignment.cpp  FaceAlignment.hpp  Module1.cpp  Module1.hpp  main.cpp  temp.cpp  try.cpp  try2.cpp
src/faceAlignment/: align.cpp  align.hpp  util.cpp  util.hpp
src/faceDetection/: module1.cpp  module1.hpp
test/: premake.sh  run.sh
