cmake_minimum_required(VERSION 3.0)
SET (PROJECT_ROOT "${PROJECT_SOURCE_DIR}")
SET (PROJECT_SOURCE_DIR "${PROJECT_SOURCE_DIR}/src")
MESSAGE ("Source path: ${PROJECT_SOURCE_DIR}")
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
set(CMAKE_BUILD_FILES_DIRECTORY ${dir})
project(test)
add_executable(exe ${PROJECT_SOURCE_DIR}/src/main.cpp ${PROJECT_SOURCE_DIR}/src/Module1.cpp ${PROJECT_SOURCE_DIR}/src/Module1.hpp)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
target_link_libraries(exe ${OpenCV_LIBS})